kubernetes/homelab/apps/lldap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
  namespace: lldap
  annotations:
    istio.io/ingress-mtls: "true"
spec:
  selector:
    app: lldap
  ports:
  - name: ldap
    port: 3890
    targetPort: 3890
  - name: http
    port: 17170
    targetPort: 17170
  type: ClusterIP
