kubernetes/homelab/apps/lldap/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: lldap
  namespace: lldap
spec:
  hosts:
  - lldapx.daddyshome.fr
  gateways:
  - istio-ingress/homelab-mtls-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: lldap
        port:
          number: 17170
